Bug 948268 - Remove privilege check from MozCancelFullScreen() to comply with the spec. r=cpearce, f=bz,smaug